--- a/source/TimeTracker.Data/TimeTracker.Data.csproj
+++ b/source/TimeTracker.Data/TimeTracker.Data.csproj
@@ -51,11 +51,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Company.cs">
+      <DependentUpon>TimeTracker.tt</DependentUpon>
+    </Compile>
     <Compile Include="Person.cs">
       <DependentUpon>TimeTracker.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\EntityCompanyRepository.cs" />
     <Compile Include="Repository\EntityPersonRepository.cs" />
+    <Compile Include="Repository\EntityWorkEventRepository.cs" />
     <Compile Include="TimeTracker.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
