--- a/source/TimeTracker.Service.Core/TimeTracker.Service.Core.csproj
+++ b/source/TimeTracker.Service.Core/TimeTracker.Service.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B9D1DBAA-9294-405D-A6A8-911C0E11E7AC}</ProjectGuid>
+    <ProjectGuid>{299D02A0-746E-41CD-BB0C-CC10B313D882}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TimeTracker.Core</RootNamespace>
-    <AssemblyName>TimeTracker.Core</AssemblyName>
+    <RootNamespace>TimeTracker.Service.Core</RootNamespace>
+    <AssemblyName>TimeTracker.Service.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -42,20 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Company.cs" />
-    <Compile Include="Model\Person.cs" />
-    <Compile Include="Model\WorkEvent.cs" />
-    <Compile Include="Model\WorkEventType.cs" />
+    <Compile Include="Model\WebResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\ICompanyRepository.cs" />
-    <Compile Include="Repository\IPersonRepository.cs" />
-    <Compile Include="Repository\IWorkEventRepository.cs" />
-    <Compile Include="Service\ICompanyService.cs" />
-    <Compile Include="Service\CompanyService.cs" />
-    <Compile Include="Service\IPersonService.cs" />
-    <Compile Include="Service\IWorkEventService.cs" />
-    <Compile Include="Service\PersonService.cs" />
-    <Compile Include="Service\WorkEventService.cs" />
+    <Compile Include="Service\ICompanyController.cs" />
+    <Compile Include="Service\IPersonController.cs" />
+    <Compile Include="Service\IWorkEventController.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TimeTracker.Core\TimeTracker.Core.csproj">
+      <Project>{b9d1dbaa-9294-405d-a6a8-911c0e11e7ac}</Project>
+      <Name>TimeTracker.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
