--- a/source/TimeTracker.Service/TimeTracker.Service.csproj
+++ b/source/TimeTracker.Service/TimeTracker.Service.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PersonController.cs" />
+    <Compile Include="WorkEventController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
