--- a/source/TimeTracker.Web/TimeTracker.Web.csproj
+++ b/source/TimeTracker.Web/TimeTracker.Web.csproj
@@ -24,19 +24,16 @@
   <ItemGroup>
     <Content Include="app.css" />
     <Content Include="index.html" />
+    <Content Include="js\companyController.js" />
+    <Content Include="js\main.js" />
+    <Content Include="js\timeTrackerController.js" />
     <Content Include="packages.config" />
-    <None Include="Scripts\jquery-2.1.4.intellisense.js" />
-    <Content Include="Scripts\jquery-2.1.4.js" />
-    <Content Include="Scripts\jquery-2.1.4.min.js" />
+    <None Include="js\libs\jquery\jquery-2.1.4.intellisense.js" />
+    <Content Include="js\libs\jquery\jquery-2.1.4.js" />
+    <Content Include="js\libs\jquery\jquery-2.1.4.min.js" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="app.ts" />
-    <TypeScriptCompile Include="Scripts\typings\jasmine-ajax\jasmine-ajax.d.ts" />
-    <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Scripts\jquery-2.1.4.min.map" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
